[IMP] Rename base_continent.py file

--- a/base_continent/views/base_continent_view.xml
+++ b/base_continent/views/base_continent_view.xml
@@ -55,7 +55,7 @@
             <field name="help">Display and manage the list of all continents that can be assigned to your partner records.</field>
         </record>
 
-        <menuitem action="action_continent" id="menu_continent_partner" parent="base.menu_localisation" sequence="1" groups="base.group_no_one"/>
+        <menuitem action="action_continent" id="menu_continent_partner" parent="sales_team.menu_localisation" sequence="1" groups="base.group_no_one"/>
 
         <!-- add continent to res partner form -->
         <record model="ir.ui.view" id="res_partner_form_add_continent">
