[ADD] Add code to continent

--- a/base_continent/views/base_continent_view.xml
+++ b/base_continent/views/base_continent_view.xml
@@ -30,7 +30,8 @@
             <field name="model">res.continent</field>
             <field name="arch" type="xml">
                 <tree string="Continent">
-                    <field name="name"/>
+                    <field name="name" />
+                    <field name="code" />
                 </tree>
             </field>
         </record>
@@ -42,6 +43,7 @@
                 <form string="Continent" version="7.0">
                     <group>
                         <field name="name"/>
+                        <field name="code" />
                     </group>
                     <group>
                         <separator colspan="4" string="Countries" />
