--- a/base_continent/views/base_continent_view.xml
+++ b/base_continent/views/base_continent_view.xml
@@ -1,84 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-  <data>
-        <!-- add continent to res country tree -->
-        <record model="ir.ui.view" id="view_country_tree_add_continent">
-            <field name="name">res.country.tree.add_continent</field>
-            <field name="model">res.country</field>
-            <field name="inherit_id" ref="base.view_country_tree" />
-            <field name="arch" type="xml">
-                <field name="code" position="after">
-                    <field name="continent_id"/>
-                </field>
+<odoo>
+    
+    <!-- add continent to res country tree -->
+    <record model="ir.ui.view" id="view_country_tree_add_continent">
+        <field name="name">res.country.tree.add_continent</field>
+        <field name="model">res.country</field>
+        <field name="inherit_id" ref="base.view_country_tree" />
+        <field name="arch" type="xml">
+            <field name="code" position="after">
+                <field name="continent_id"/>
             </field>
-        </record>
+        </field>
+    </record>
 
-        <!-- add continent to res country form -->
-        <record model="ir.ui.view" id="view_country_form_add_continent">
-            <field name="name">res.country.form.add_continent</field>
-            <field name="model">res.country</field>
-            <field name="inherit_id" ref="base.view_country_form"/>
-            <field name="arch" type="xml">
-                <field name="code" position="after">
-                    <field name="continent_id"/>
-                </field>
+    <!-- add continent to res country form -->
+    <record model="ir.ui.view" id="view_country_form_add_continent">
+        <field name="name">res.country.form.add_continent</field>
+        <field name="model">res.country</field>
+        <field name="inherit_id" ref="base.view_country_form"/>
+        <field name="arch" type="xml">
+            <field name="code" position="after">
+                <field name="continent_id"/>
             </field>
-        </record>
+        </field>
+    </record>
 
-        <record id="view_continent_tree" model="ir.ui.view">
-            <field name="name">res.continent.tree</field>
-            <field name="model">res.continent</field>
-            <field name="arch" type="xml">
-                <tree string="Continent">
-                    <field name="name" />
+    <record id="view_continent_tree" model="ir.ui.view">
+        <field name="name">res.continent.tree</field>
+        <field name="model">res.continent</field>
+        <field name="arch" type="xml">
+            <tree string="Continent">
+                <field name="name" />
+                <field name="code" />
+            </tree>
+        </field>
+    </record>
+
+    <record id="view_continent_form" model="ir.ui.view">
+        <field name="name">res.continent.form</field>
+        <field name="model">res.continent</field>
+        <field name="arch" type="xml">
+            <form string="Continent" version="7.0">
+                <group name="main_infos">
+                    <field name="name"/>
                     <field name="code" />
-                </tree>
+                </group>
+                <group name="countries">
+                    <separator colspan="4" string="Countries" />
+                    <field name="countries" mode="tree" nolabel="1" readonly="True" colspan="4">
+                        <tree string="Countries">
+                            <field name="name" />
+                            <field name="code" />
+                        </tree>
+                    </field>
+                </group>
+            </form>
+        </field>
+    </record>
+
+    <record id="action_continent" model="ir.actions.act_window">
+        <field name="name">Continents</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">res.continent</field>
+        <field name="view_type">form</field>
+        <field name="help">Display and manage the list of all continents that can be assigned to your partner records.</field>
+    </record>
+
+    <menuitem action="action_continent" id="menu_continent_partner" parent="sales_team.menu_localisation" sequence="1" groups="base.group_no_one"/>
+
+    <!-- add continent to res partner form -->
+    <record model="ir.ui.view" id="res_partner_form_add_continent">
+        <field name="name">res.partner.form.add_continent</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="base.view_partner_form"/>
+        <field name="arch" type="xml">
+            <field name="country_id" position="after">
+                <field name="continent_id" widget="selection"/>
             </field>
-        </record>
+        </field>
+    </record>
 
-        <record id="view_continent_form" model="ir.ui.view">
-            <field name="name">res.continent.form</field>
-            <field name="model">res.continent</field>
-            <field name="arch" type="xml">
-                <form string="Continent" version="7.0">
-                    <group name="main_infos">
-                        <field name="name"/>
-                        <field name="code" />
-                    </group>
-                    <group name="countries">
-                        <separator colspan="4" string="Countries" />
-                        <field name="countries" mode="tree" nolabel="1" readonly="True" colspan="4">
-                            <tree string="Countries">
-                                <field name="name" />
-                                <field name="code" />
-                            </tree>
-                        </field>
-                    </group>
-                </form>
-            </field>
-        </record>
-
-        <record id="action_continent" model="ir.actions.act_window">
-            <field name="name">Continents</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">res.continent</field>
-            <field name="view_type">form</field>
-            <field name="help">Display and manage the list of all continents that can be assigned to your partner records.</field>
-        </record>
-
-        <menuitem action="action_continent" id="menu_continent_partner" parent="sales_team.menu_localisation" sequence="1" groups="base.group_no_one"/>
-
-        <!-- add continent to res partner form -->
-        <record model="ir.ui.view" id="res_partner_form_add_continent">
-            <field name="name">res.partner.form.add_continent</field>
-            <field name="model">res.partner</field>
-            <field name="inherit_id" ref="base.view_partner_form"/>
-            <field name="arch" type="xml">
-                <field name="country_id" position="after">
-                    <field name="continent_id" widget="selection"/>
-                </field>
-            </field>
-        </record>
-
-  </data>
-</openerp>
+</odoo>
