[FIX] base_location: Don't error due to missing field
parent_id field doesn't exists anymore on v9, but it's not needed any way.

--- a/base_location/views/partner_view.xml
+++ b/base_location/views/partner_view.xml
@@ -17,7 +17,8 @@
                     <field name="zip_id"
                         options="{'create_name_field': 'city', 'no_open': True, 'no_create': True}"
                         placeholder="City completion"
-                        class="oe_edit_only" attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}" />
+                        class="o_city_state"
+                    />
                 </xpath>
             </field>
         </record>
