--- a/partner_financial_risk/wizard/partner_risk_exceeded_view.xml
+++ b/partner_financial_risk/wizard/partner_risk_exceeded_view.xml
@@ -17,7 +17,7 @@
                             class="oe_highlight"
                             name="button_continue"
                             type="object"
-                            groups="sales_team.group_sale_manager,account.group_account_manager"
+                            groups="account.group_account_manager"
                             />
                     <button string="Cancel"
                             class="oe_link"
