--- a/partner_street_number/views/res_partner.xml
+++ b/partner_street_number/views/res_partner.xml
@@ -24,6 +24,7 @@
                <xpath expr="/form/sheet//div/field[@name='street']"
                        position="attributes">
                     <attribute name="invisible">1</attribute>
+                    <attribute name="readonly">1</attribute>
                 </xpath>
 
                 <xpath expr="//form[@string='Contact']/sheet/group/div/field[@name='street']"
@@ -40,6 +41,7 @@
                 <xpath expr="//form[@string='Contact']/sheet/group/div/field[@name='street']"
                        position="attributes">
                     <attribute name="invisible">1</attribute>
+                    <attribute name="readonly">1</attribute>
                 </xpath>
 
                 <xpath expr="//field[@name='child_ids']" position="attributes">
