--- a/partner_phonecall_schedule/views/res_partner_view.xml
+++ b/partner_phonecall_schedule/views/res_partner_view.xml
@@ -16,7 +16,9 @@
                      admins could do it; we need plenty of space to display
                      the aggregated schedule. All that said, we have to use a
                      list widget inside a dedicated page. -->
-                <page string="Phone calls" name="phonecalls">
+                <page string="Phone calls"
+                      name="phonecalls"
+                      groups="base.group_partner_manager">
                     <group>
                         <field name="phonecall_available"/>
                         <field name="phonecall_calendar_ids"/>
@@ -36,6 +38,7 @@
                 <filter
                     string="Available for phone calls now"
                     name="phonecall_available"
+                    groups="base.group_partner_manager"
                     domain="[('phonecall_available', '=', True)]"/>
             </xpath>
         </field>
