--- a/partner_phonecall_schedule/views/res_partner_view.xml
+++ b/partner_phonecall_schedule/views/res_partner_view.xml
@@ -8,6 +8,8 @@
         <field name="name">Partner phonecall schedule</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
+        <field name="groups_id"
+               eval="[(4, ref('base.group_partner_manager'), 0)]"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook">
                 <!-- `many2many_tags` widget would not allow the user to click
@@ -16,9 +18,7 @@
                      admins could do it; we need plenty of space to display
                      the aggregated schedule. All that said, we have to use a
                      list widget inside a dedicated page. -->
-                <page string="Phone calls"
-                      name="phonecalls"
-                      groups="base.group_partner_manager">
+                <page string="Phone calls" name="phonecalls">
                     <group>
                         <field name="phonecall_available"/>
                         <field name="phonecall_calendar_ids"/>
@@ -33,12 +33,13 @@
         <field name="name">Partner phonecall availability</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_res_partner_filter"/>
+        <field name="groups_id"
+               eval="[(4, ref('base.group_partner_manager'), 0)]"/>
         <field name="arch" type="xml">
             <xpath expr="//separator[last()]" position="before">
                 <filter
                     string="Available for phone calls now"
                     name="phonecall_available"
-                    groups="base.group_partner_manager"
                     domain="[('phonecall_available', '=', True)]"/>
             </xpath>
         </field>
