--- a/partner_financial_risk/wizard/partner_risk_exceeded_view.xml
+++ b/partner_financial_risk/wizard/partner_risk_exceeded_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- © 2016 Carlos Dauden <carlos.dauden@tecnativa.com>
+<!-- Copyright 2016 Carlos Dauden <carlos.dauden@tecnativa.com>
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl-3). -->
 <odoo>
     <record id="partner_risk_exceeded_wizard" model="ir.ui.view">
