--- a/partner_contact_nationality/views/res_partner.xml
+++ b/partner_contact_nationality/views/res_partner.xml
@@ -7,7 +7,7 @@
     <field name="inherit_id" ref="partner_contact_personal_information_page.personal_information"/>
     <field name="arch" type="xml">
         <data>
-            <xpath expr="//page[@name='personal_information_page']/group[@name='personal_information_group']">
+            <xpath expr="//page[@name='personal_information_page']//group[@name='personal_information_group']">
                 <field name='nationality_id'/>
             </xpath>
         </data>
