--- a/partner_contact_in_several_companies/views/res_partner.xml
+++ b/partner_contact_in_several_companies/views/res_partner.xml
@@ -34,6 +34,9 @@
     <field name="inherit_id" ref="base.view_partner_form"/>
     <field name="type">form</field>
     <field name="arch" type="xml">
+        <field name="parent_id" position="after">
+            <field name="contact_id" invisible="1"/>
+        </field>
         <xpath expr="//field[@name='child_ids']/form//field[@name='name']" position="before">
             <field name='contact_type' readonly='0'/>
             <field name="contact_id" string="Contact"
