--- a/base_partner_merge/views/base_partner_merge.xml
+++ b/base_partner_merge/views/base_partner_merge.xml
@@ -8,55 +8,56 @@
         <field name="target">new</field>
         <field name="context">{'active_test': False}</field>
     </record>
-    <record model='ir.ui.view' id='base_partner_merge_automatic_wizard_form'>
-        <field name='name'>base.partner.merge.automatic.wizard.form</field>
-        <field name='model'>base.partner.merge.automatic.wizard</field>
-        <field name='arch' type='xml'>
-            <form string='Automatic Merge Wizard'>
+
+    <record model="ir.ui.view" id="base_partner_merge_automatic_wizard_form">
+        <field name="name">base.partner.merge.automatic.wizard.form</field>
+        <field name="model">base.partner.merge.automatic.wizard</field>
+        <field name="arch" type="xml">
+            <form string="Automatic Merge Wizard">
                 <sheet>
-                    <group attrs="{'invisible': [('state', '!=', 'finished')]}" col="1">
+                    <group name="deduplicate" attrs="{'invisible': [('state', '!=', 'finished')]}" col="1">
                         <h2>There is no more contacts to merge for this request...</h2>
                         <button name="%(action_partner_deduplicate)d" string="Deduplicate the other Contacts" class="oe_highlight"
                         type="action"/>
                     </group>
-                    <p class="oe_grey" attrs="{'invisible': [('state', '!=', ('option'))]}">
+                    <p class="oe_grey" attrs="{'invisible': [('state', '!=', 'option')]}">
                         Select the list of fields used to search for
                         duplicated records. If you select several fields,
                         Odoo will propose you to merge only those having
                         all these fields in common. (not one of the fields).
                     </p>
-                    <group attrs="{'invisible': ['|', ('state', 'not in', ('selection', 'finished')), ('number_group', '=', 0)]}">
+                    <group name="deduplicate_open" attrs="{'invisible': ['|', ('state', 'not in', ('selection', 'finished')), ('number_group', '=', 0)]}">
                         <field name="state" invisible="1" />
                         <field name="number_group"/>
                     </group>
-                    <group string="Search duplicates based on duplicated data in"
+                    <group name="deduplicate_data" string="Search duplicates based on duplicated data in"
                         attrs="{'invisible': [('state', 'not in', ('option',))]}">
-                        <field name='group_by_email' />
-                        <field name='group_by_name' />
-                        <field name='group_by_is_company' />
-                        <field name='group_by_vat' />
-                        <field name='group_by_parent_id' />
+                        <field name="group_by_email" />
+                        <field name="group_by_name" />
+                        <field name="group_by_is_company" />
+                        <field name="group_by_vat" />
+                        <field name="group_by_parent_id" />
                     </group>
-                    <group string="Exclude contacts having"
+                    <group name="deduplicate_exclude_contacts" string="Exclude contacts having"
                         attrs="{'invisible': [('state', 'not in', ('option',))]}">
-                        <field name='exclude_contact' />
-                        <field name='exclude_journal_item' />
+                        <field name="exclude_contact" />
+                        <field name="exclude_journal_item" />
                     </group>
                     <separator string="Options" attrs="{'invisible': [('state', 'not in', ('option',))]}"/>
-                    <group attrs="{'invisible': [('state', 'not in', ('option','finished'))]}">
-                        <field name='maximum_group' attrs="{'readonly': [('state', 'in', ('finished'))]}"/>
+                    <group name="deduplicate_max" attrs="{'invisible': [('state', 'not in', ('option','finished'))]}">
+                        <field name="maximum_group" attrs="{'readonly': [('state', 'in', ('finished'))]}"/>
                     </group>
                     <separator string="Merge the following contacts"
                         attrs="{'invisible': [('state', 'in', ('option', 'finished'))]}"/>
-                    <group attrs="{'invisible': [('state', 'in', ('option', 'finished'))]}" col="1">
+                    <group name="deduplicate_contacts" attrs="{'invisible': [('state', 'in', ('option', 'finished'))]}" col="1">
                         <p class="oe_grey">
                             Selected contacts will be merged together.
                             All documents linked to one of these contacts
                             will be redirected to the destination contact.
                             You can remove contacts from this list to avoid merging them.
                         </p>
-                        <group col="2">
-                            <field name="dst_partner_id" domain="[('id', 'in', partner_ids and partner_ids[0] and partner_ids[0][2] or False)]" attrs="{'required': [('state', '=', 'selection')]}"/>
+                        <group name="deduplicate_partners" col="2">
+                            <field name="dst_partner_id" domain="[('id', 'in', partner_ids or False)]" attrs="{'required': [('state', '=', 'selection')]}"/>
                         </group>
                         <field name="partner_ids" nolabel="1">
                             <tree string="Partners">
@@ -71,37 +72,34 @@
                     </group>
                 </sheet>
                 <footer>
-                    <button name='action_merge' string='Merge Contacts'
-                        class='oe_highlight'
-                        type='object'
+                    <button name="action_merge" string="Merge Contacts"
+                        class="oe_highlight"
+                        type="object"
                         attrs="{'invisible': [('state', 'in', ('option', 'finished' ))]}" />
-                    <button name='action_skip' string='Skip these contacts'
-                        type='object'
+                    <button name="action_skip" string="Skip these contacts"
+                        type="object"
                         attrs="{'invisible': [('state', '!=', 'selection')]}" />
-                    <button name='action_start_manual_process'
-                        string='Merge with Manual Check'
-                        type='object'  class='oe_highlight'
+                    <button name="action_start_manual_process"
+                        string="Merge with Manual Check"
+                        type="object"  class="oe_highlight"
                         attrs="{'invisible': [('state', '!=', 'option')]}" />
-                    <button name='action_start_automatic_process'
-                        string='Merge Automatically'
-                        type='object' class='oe_highlight'
+                    <button name="action_start_automatic_process"
+                        string="Merge Automatically"
+                        type="object" class="oe_highlight"
                         confirm="Are you sure to execute the automatic merge of your contacts ?"
                         attrs="{'invisible': [('state', '!=', 'option')]}" />
-                    <button name='action_update_all_process'
-                        string='Merge Automatically all process'
-                        type='object'
+                    <button name="action_update_all_process"
+                        string="Merge Automatically all process"
+                        type="object"
                         confirm="Are you sure to execute the list of automatic merges of your contacts ?"
                         attrs="{'invisible': [('state', '!=', 'option')]}" />
-                    <span class="or_cancel" attrs="{'invisible': [('state', '=', 'finished')]} ">or
-                        <button special="cancel" string="Cancel" type="object" class="oe_link oe_inline"/>
-                    </span>
-                    <span class="or_cancel" attrs="{'invisible': [('state', '!=', 'finished')]} ">
-                        <button special="cancel" string="Close" type="object" class="oe_link oe_inline"/>
-                    </span>
+                    <button special="cancel" string="Cancel" type="object" class="btn btn-default oe_inline" attrs="{'invisible': [('state', '=', 'finished')]}"/>
+                    <button special="cancel" string="Close" type="object" class="btn btn-default oe_inline" attrs="{'invisible': [('state', '!=', 'finished')]}"/>
                 </footer>
             </form>
         </field>
     </record>
+
     <act_window
         id="action_partner_merge"
         res_model="base.partner.merge.automatic.wizard"
