--- a/partner_financial_risk/views/res_partner_view.xml
+++ b/partner_financial_risk/views/res_partner_view.xml
@@ -6,7 +6,7 @@
 <record id="res_partner_view_risk" model="ir.ui.view">
     <field name="name">res.partner.view.risk</field>
     <field name="model">res.partner</field>
-    <field name="inherit_id" ref="base.view_partner_form" />
+    <field name="inherit_id" ref="account.view_partner_property_form"/>
     <field name="priority" eval="20"/>
     <field name="groups_id" eval="[(4, ref('base.group_sale_salesman')), (4, ref('account.group_account_manager'))]"/>
     <field name="arch" type="xml">
