--- a/partner_fax/views/res_partner.xml
+++ b/partner_fax/views/res_partner.xml
@@ -40,4 +40,15 @@
         </field>
     </record>
 
+    <record id="view_company_form_fax" model="ir.ui.view">
+        <field name="name">Add fax on partner</field>
+        <field name="model">res.company</field>
+        <field name="inherit_id" ref="base.view_company_form"/>
+        <field name="arch" type="xml">
+            <field name="phone" position="after">
+                <field name="fax"/>
+            </field>
+        </field>
+    </record>
+
 </odoo>
