[9.0][IMP] partner_sector: allow to search for Main sector and children.

--- a/partner_sector/views/res_partner_sector_view.xml
+++ b/partner_sector/views/res_partner_sector_view.xml
@@ -16,6 +16,7 @@
         <field name="arch" type="xml">
             <tree string="Sectors" editable="top">
                 <field name="name"/>
+                <field name="complete_name"/>
                 <field name="parent_id"/>
             </tree>
         </field>
