Fixing use of @class and do not inheriting address from parent company

--- a/partner_affiliate/views/res_partner_view.xml
+++ b/partner_affiliate/views/res_partner_view.xml
@@ -8,12 +8,13 @@
         <field eval="1" name="priority"/>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-            <xpath expr="/form/sheet//div[@class='o_row']/field[@name='parent_id']" position="attributes">
+            <xpath expr="/form/sheet//div[hasclass('o_row')]/field[@name='parent_id']" position="attributes">
                 <attribute name="attrs"></attribute>
             </xpath>
             <xpath expr='//page[@name="internal_notes"]' position="before">
                 <page string="Affiliates" attrs="{'invisible': [('is_company','=',False)]}">
-                    <field name="affiliate_ids" context="{'default_parent_id': active_id, 'default_is_company': True}" mode="kanban">
+                    <field name="affiliate_ids"
+                           context="{'default_parent_id': active_id, 'default_is_company': True, 'default_type':'other'}" mode="kanban">
                         <kanban>
                             <field name="color"/>
                             <field name="name"/>
