--- a/partner_financial_risk/views/res_config_view.xml
+++ b/partner_financial_risk/views/res_config_view.xml
@@ -4,19 +4,28 @@
 <odoo>
 
     <record id="view_account_config" model="ir.ui.view">
-        <field name="name">account settings</field>
-        <field name="model">account.config.settings</field>
-        <field name="inherit_id" ref="account.view_account_config_settings"/>
+        <field name="name">account settings partner risk</field>
+        <field name="model">res.config.settings</field>
+        <field name="inherit_id" ref="account.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-
-            <xpath expr="//div[@name='payment_acquirer']/.." position="after">
-                <label for="id" string="Financial Risk"/>
-                <div name="financial_risk" string="Financial Risk div">
-                    <label for="invoice_unpaid_margin"/>
-                    <field name="invoice_unpaid_margin" class="oe_inline"/>
+            <div data-key="account_invoicing" position="inside">
+                <h2>Partner Risks</h2>
+                <div class="row mt16 o_settings_container"
+                     id="pain">
+                    <div class="col-xs-12 col-md-6 o_setting_box">
+                        <div class="o_setting_right_pane">
+                            <div class="content-group">
+                                <div class="row mt16">
+                                    <label for="invoice_unpaid_margin"
+                                           string="Financial Risk"
+                                           class="col-md-3 o_light_label"/>
+                                    <field name="invoice_unpaid_margin"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </xpath>
-
+            </div>
         </field>
     </record>
 
