--- a/partner_social_media/views/res_partner_view.xml
+++ b/partner_social_media/views/res_partner_view.xml
@@ -8,15 +8,15 @@
             <page name="internal_notes" position="after">
                 <page name="social_media_page" string="Social Media">
                     <group string="Social Media" name="social_media">
-                        <field name="social_rss"/>
-                        <field name="social_twitter"/>
-                        <field name="social_facebook"/>
-                        <field name="social_github"/>
-                        <field name="social_linkedin"/>
-                        <field name="social_youtube"/>
-                        <field name="social_googleplus"/>
-                        <field name="social_flickr"/>
-                        <field name="social_slideshare"/>
+                        <field name="social_rss" widget="url" />
+                        <field name="social_twitter" widget="url" />
+                        <field name="social_facebook" widget="url" />
+                        <field name="social_github" widget="url" />
+                        <field name="social_linkedin" widget="url" />
+                        <field name="social_youtube" widget="url" />
+                        <field name="social_googleplus" widget="url" />
+                        <field name="social_flickr" widget="url" />
+                        <field name="social_slideshare" widget="url" />
                     </group>
                 </page>
             </page>
