[IMP] partner_capital : migration to 11.0

--- a/partner_capital/views/res_partner_turnover_range_view.xml
+++ b/partner_capital/views/res_partner_turnover_range_view.xml
@@ -21,6 +21,6 @@
 
 <menuitem action="res_partner_turnover_range_action"
           id="menu_res_partner_turnover_range"
-          parent="sales_team.menu_config_address_book"/>
+          parent="sale.menu_sale_config"/>
 
 </odoo>
