--- a/partner_sector/views/res_partner_sector_view.xml
+++ b/partner_sector/views/res_partner_sector_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- © 2015 Antiun Ingenieria S.L. - Javier Iniesta
+<!-- Copyright 2015 Antiun Ingenieria S.L. - Javier Iniesta
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html). -->
 <odoo>
 
@@ -24,7 +24,7 @@
     <menuitem action="res_partner_sector_action"
               id="menu_res_partner_sector"
               name="Sectors"
-              parent="sales_team.menu_config_address_book"
+              parent="contacts.res_partner_menu_config"
               sequence="3"/>
 
 </odoo>
