--- a/partner_sector/views/res_config_settings.xml
+++ b/partner_sector/views/res_config_settings.xml
@@ -9,16 +9,21 @@
             <field name="inherit_id" ref="base_setup.res_config_settings_view_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//div[@name='multi_company']" position="after">
-                    <h2>Partner Sectors</h2>
-                    <div class="row mt16 o_settings_container" name="partner_sectors">
+                    <h2>Partner Industries</h2>
+                    <div class="row mt16 o_settings_container" name="partner_industries">
                         <div class="col-xs-12 col-md-6 o_setting_box">
                             <div class="o_setting_left_pane">
-                                <field name="group_use_partner_sector_for_person"/>
+                                <field name="group_use_partner_industry_for_person"/>
                             </div>
                             <div class="o_setting_right_pane">
-                                <label string="Sector for individual" for="group_use_partner_sector_for_person"/>
+                                <label string="Industry for individual" for="group_use_partner_industry_for_person"/>
                                 <div class="text-muted">
-                                    Enable sectors for individuals.
+                                    Enable industries for individuals
+                                </div>
+                                <div class="content-group">
+                                    <div class="mt16" attrs="{'invisible': [('group_use_partner_industry_for_person', '=', False)]}">
+                                        <button name="%(base.res_partner_industry_action)d" icon="fa-arrow-right" type="action" string="Industries" class="btn-link"/>
+                                    </div>
                                 </div>
                             </div>
                         </div>
