--- a/partner_industry_secondary/views/res_partner_view.xml
+++ b/partner_industry_secondary/views/res_partner_view.xml
@@ -62,7 +62,7 @@
         <field name="name">Partner form with industry</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
-        <field name="groups_id" eval="[(4, ref('partner_sector.group_use_partner_industry_for_person'))]"/>
+        <field name="groups_id" eval="[(4, ref('partner_industry_secondary.group_use_partner_industry_for_person'))]"/>
         <field name="arch" type="xml">
             <xpath expr="//page/group/group/field[@name='industry_id']" position="attributes">
                 <attribute name="attrs">{'invisible': 0}</attribute>
@@ -73,8 +73,8 @@
     <record model="ir.ui.view" id="view_partner_form_industry_person">
         <field name="name">Partner form with industry</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="partner_sector.view_partner_form_industry"/>
-        <field name="groups_id" eval="[(4, ref('partner_sector.group_use_partner_industry_for_person'))]"/>
+        <field name="inherit_id" ref="partner_industry_secondary.view_partner_form_industry"/>
+        <field name="groups_id" eval="[(4, ref('partner_industry_secondary.group_use_partner_industry_for_person'))]"/>
         <field name="arch" type="xml">
             <xpath expr="//page/group/group/field[@name='secondary_industry_ids']" position="attributes">
                 <attribute name="attrs">{'invisible': 0}</attribute>
@@ -91,8 +91,8 @@
     <record model="ir.ui.view" id="view_partner_tree_industry_person">
         <field name="name">Partner tree with industry</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="partner_sector.view_partner_tree_industry"/>
-        <field name="groups_id" eval="[(4, ref('partner_sector.group_use_partner_industry_for_person'))]"/>
+        <field name="inherit_id" ref="partner_industry_secondary.view_partner_tree_industry"/>
+        <field name="groups_id" eval="[(4, ref('partner_industry_secondary.group_use_partner_industry_for_person'))]"/>
         <field name="arch" type="xml">
             <field name="industry_id" position="attributes">
                 <attribute name="attrs">{'invisible': 0}</attribute>
@@ -103,8 +103,8 @@
     <record model="ir.ui.view" id="view_res_partner_filter_industry_person">
         <field name="name">Partner search with industry</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="partner_sector.view_res_partner_filter_industry"/>
-        <field name="groups_id" eval="[(4, ref('partner_sector.group_use_partner_industry_for_person'))]"/>
+        <field name="inherit_id" ref="partner_industry_secondary.view_res_partner_filter_industry"/>
+        <field name="groups_id" eval="[(4, ref('partner_industry_secondary.group_use_partner_industry_for_person'))]"/>
         <field name="arch" type="xml">
             <filter name="industry" position="attributes">
                 <attribute name="domain"/>
