[IMP] partner_noncommercial. Reorganize menu's.
There were menu-options for partners and relations interspersed, and no clear separation between
normal menu's and configuration. This commit tries to rectify this.

I abandoned the idea for 10.0 of bringing everything under the contact menu. In 11.0 relations
are under the contact menu and the dependency on sales_team can be easily removed.

But for 10.0 I would not confuse existing users and installations by changing the dependency graph of
modules and putting stuff under a new main menu (contacts instead of partners).

New options have been translated into Dutch. The rest can be done through weblate.

--- a/partner_noncommercial/views/menu.xml
+++ b/partner_noncommercial/views/menu.xml
@@ -23,7 +23,7 @@
         sequence="4"
         />
 
-    <!-- Add menu item to show all relations -->
+    <!-- Add menu item to show all partners -->
     <record id="action_all_partner_form" model="ir.actions.act_window">
         <field name="name">All partners</field>
         <field name="type">ir.actions.act_window</field>
@@ -80,7 +80,7 @@
         sequence="31"
         />
 
-    <!-- Add menu item to show all relations and other addresses -->
+    <!-- Add menu item to show all true partners and other addresses -->
     <record id="action_address_form" model="ir.actions.act_window">
         <field name="name">All addresses</field>
         <field name="type">ir.actions.act_window</field>
@@ -99,12 +99,18 @@
         sequence="41"
         />
 
-    <!-- Move address book configuration to partner menu -->
+    <!-- Create configuration menu -->
     <menuitem
-        id="sales_team.menu_config_address_book"
-        name="Contacts"
-        parent="menu_partner"
-        sequence="90"
+        id="menu_partner_config"
+        name="Configuration"
+        parent="menu_partner_main"
+        groups="base.group_partner_manager"
+        sequence="99"
         />
+
+    <!-- Move address book configuration to partner menu -->
+    <record id="sales_team.menu_config_address_book" model="ir.ui.menu">
+        <field name="parent_id" ref="menu_partner_config" />
+    </record>
 
 </odoo>
