--- a/partner_multi_relation/views/menu.xml
+++ b/partner_multi_relation/views/menu.xml
@@ -12,7 +12,7 @@
             id="action_res_partner_relation_type"
             res_model="res.partner.relation.type"
             view_mode="tree,form"
-            name="Partner Relations Types"
+            name="Relation Types"
         />
 
         <menuitem
