--- a/partner_multi_relation_tabs/views/res_partner_tab.xml
+++ b/partner_multi_relation_tabs/views/res_partner_tab.xml
@@ -15,12 +15,27 @@
             <field name="model">res.partner.tab</field>
             <field type="xml" name="arch">
                 <form>
-                    <group>
-                        <field name="code" />
-                        <field name="name" />
-                        <field name="contact_type" />
-                        <field name="partner_category_id" />
-                        <field name="partner_ids" />
+                    <group colspan="6" col="4">
+                        <group
+                            id="tab_group_general" string="General"
+                            colspan="2" col="2"
+                            >
+                            <field name="code" />
+                            <field name="name" />
+                        </group>
+                        <group
+                            id="tab_group_target"
+                            string="Select partner type and category for tab"
+                            colspan="2" col="2"
+                            >
+                            <field name="contact_type" />
+                            <field name="partner_category_id" />
+                        </group>
+                        <separator
+                            colspan="2"
+                            string="Select specific partners to have this tab"
+                            />
+                        <field name="partner_ids" colspan="2" nolabel="1"/>
                     </group>
                 </form>
             </field>
